summative.moria.Moria.scala.error
Erreur de compilation :
Moria:11: error: not found: value Direction
  } else if (estSurBiscuit() && Direction.WEST == true) {
                                ^