summative.moria.Moria.scala.code
retourne();
while (estFaceMur() == false) {

  if (!estSurBiscuit()) {
    avance();
  } else if (estSurBiscuit()) {
  
  	prendBiscuit();
  	retourne();
    
  } else if (estSurBiscuit() && Direction.WEST == true) {
    recule();
  	poseBiscuit();
  
  retourne();
  avance(); 
  }
   
  
}

droite();
avance();
gauche();
avance();

//A corriger